--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ packages = [
 ]
 version = "0.0.0"
 
+[tool.poetry.group.dev.dependencies]
+pygobject-stubs = "^2.13.0"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
 build-backend = "poetry_dynamic_versioning.backend"
