--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,10 @@ authors = [
 ]
 license = "MIT"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.9,<4.0"
 dependencies = [
     "pyepics (>=3.5.8,<4.0.0)",
-    "pygobject (>=3.54.3,<4.0.0)",
+    "pygobject (>=3.44.0,<4.0.0)",
     "numpy (>=2.0.0,<3.0.0)"
 ]
 dynamic = ["version"]
